--- a/SGE/src/main/resources/velocity/main.css
+++ b/SGE/src/main/resources/velocity/main.css
@@ -15,9 +15,8 @@ body {
 }
 
 .center {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+    margin: 0 auto;
+    display: table
 }
 
 .center2 {
